Remove the call to Double constructor